<resources>
    <string name="app_name">MySubscriptions</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_calendar">Calendar</string>
    <string name="tab_text_home">Home</string>
    <string name="tab_text_analytics">Analytics</string>
    <string name="date_format_default">MM/dd/yyyy</string>
    <string name="time_format">HH:mm:ss</string>
    <string name="cost_format">%.2f</string>
    <string name="currency_default">$</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="retry">RETRY</string>
    <string name="close">Close</string>
    <string name="NA">N/A</string>
    <string name="unimplemented">That feature is not yet implemented.</string>
    <string name="category_videostreaming">Video Streaming</string>
    <string name="category_audiostreaming">Audio Streaming</string>
    <string name="category_gaming">Gaming</string>
    <string name="category_shopping">Online Shopping</string>
    <string name="category_news">News</string>
    <string name="category_education">Education</string>
    <string name="category_misc">Other</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_calendar_sync">Sync Calendar</string>
    <string name="menu_about_text1">This app was created as an educational experience and is not intended for commercial use.
        The entire project is available for free and open source on https://github.com/mpagliaro98/my-subscriptions.
        See the Github link above for specific license details.</string>
    <string name="menu_about_text2">Author: Michael Pagliaro</string>
    <string name="menu_about_text3">Extra Credits:</string>
    <string name="menu_about_text4">Ahmed Al-Amir - Code was adapted from a tutorial of his to create the calendar tab
        (https://github.com/ahmed-alamir/CalendarView)</string>
    <string name="menu_about_text5">Philipp Jahoda - MPAndroidChart was used for the analytics tab
        (https://github.com/PhilJay/MPAndroidChart)</string>
    <string name="create_button">Create Subscription</string>
    <string name="create_edit_button">Edit Subscription</string>
    <string name="create_button_edit">Update Subscription</string>
    <string name="create_delete_button">Delete Subscription</string>
    <string name="create_name">Name</string>
    <string name="create_cost">XX.XX</string>
    <string name="create_note">Any additional notes</string>
    <string name="create_text_cost1">Cost (</string>
    <string name="create_text_cost2">):</string>
    <string name="create_text_date">Start Date:</string>
    <string name="create_text_freq">You get charged</string>
    <string name="create_text_category">Category:</string>
    <string name="create_text_notif">Notifications:</string>
    <string name="create_text_next_date">Next Payment Date:</string>
    <string name="create_delete_dialog_title">Delete</string>
    <string name="create_delete_dialog_content">Would you like to delete this Subscription?</string>
    <string name="create_title_view">View Subscription</string>
    <string name="create_title_edit">Edit Subscription</string>
    <string name="create_title_create">Create Subscription</string>
    <string name="create_color_desc">The color of the chosen category.</string>
    <string name="create_date_picker_desc">Select the date this subscription began.</string>
    <string name="create_error_no_button">This button should not be here, so something went wrong.</string>
    <string name="create_error_name">You must input a name.</string>
    <string name="create_error_name_length">The name is too long.</string>
    <string name="create_error_date">The date must be formatted properly.</string>
    <string name="create_error_date_length">The date is too long.</string>
    <string name="create_error_cost">The cost must be a valid number.</string>
    <string name="create_error_cost_length">The cost is too long.</string>
    <string name="create_error_cost_zero">The cost must be more than 0.</string>
    <string name="create_error_frequency">The frequency value is invalid.</string>
    <string name="create_error_note_length">The note is too long.</string>
    <string name="array_freq_monthly">Every Month</string>
    <string name="array_freq_bimonthly">Every Two Months</string>
    <string name="array_freq_trimonthly">Every Three Months</string>
    <string name="array_freq_twiceyear">Twice a Year</string>
    <string name="array_freq_yearly">Once a Year</string>
    <string name="array_notif_none">No Notifications</string>
    <string name="array_notif_day_of">The Day Of</string>
    <string name="array_notif_day_before">The Day Before</string>
    <string name="array_notif_two_days">Two Days Before</string>
    <string name="array_notif_three_days">Three Days Before</string>
    <string name="array_notif_week">One Week Before</string>
    <string name="home_search">Search</string>
    <string name="array_sort_name">By Name</string>
    <string name="array_sort_next">By Next Date</string>
    <string name="array_sort_category">By Category</string>
    <string name="array_sort_cost">By Cost</string>
    <string name="array_sort_default">No Sorting</string>
    <string name="subview_next_date">Next Payment Date:</string>
    <string name="delete_dialog_title">Something went wrong loading your data</string>
    <string name="delete_dialog_content">Your subscription data is corrupted, and will need to be erased to continue using this app.</string>
    <string name="home_snackbar_ioexception">Something went wrong accessing your saved subscriptions.</string>
    <string name="no_memory_exception">Your device does not have enough storage space available.</string>
    <string name="settings_title">Settings</string>
    <string name="settings_snackbar_ioexception">Something went wrong accessing the settings.</string>
    <string name="settings_snackbar_delete_error">Something went wrong trying to delete your data.</string>
    <string name="settings_snackbar_success">Successfully saved settings.</string>
    <string name="settings_text_notifications">Notifications</string>
    <string name="settings_text_notiftime">Time when notifications fire</string>
    <string name="settings_text_currency">Currency symbol</string>
    <string name="settings_text_date_format">Date format</string>
    <string name="settings_save_button">Save Settings</string>
    <string name="settings_reset_button">Reset Settings</string>
    <string name="settings_reset_message">Would you like to set your settings to their default values?</string>
    <string name="settings_reset_success">Settings were reset to their defaults and saved.</string>
    <string name="settings_delete_button">Delete Data</string>
    <string name="settings_delete_message">Would you like to delete all your subscription data?</string>
    <string name="settings_delete_success">Your subscription data was successfully deleted.</string>
    <string name="settings_deletesync_button">Delete Synced Calendar</string>
    <string name="settings_deletesync_message">Would you like to remove this app\'s synced calendar data from your system calendar?
                This will only delete information created by this app.</string>
    <string name="settings_deletesync_success">Your synced calendar data was successfully deleted.</string>
    <string name="settings_time_picker_desc">Select the time notifications fire.</string>
    <string name="currency_us">$</string>
    <string name="currency_uk">£</string>
    <string name="currency_eu">€</string>
    <string name="currency_ko">₩</string>
    <string name="currency_jp">¥</string>
    <string name="date_format_1">MM/dd/yyyy</string>
    <string name="date_format_2">dd/MM/yyyy</string>
    <string name="date_format_3">yyyy/MM/dd</string>
    <string name="date_format_4">yyyy/dd/MM</string>
    <string name="analytics_thismonth">Total due this month:</string>
    <string name="analytics_restofmonth">Rest due this month:</string>
    <string name="analytics_nextmonth">Total due next month:</string>
    <string name="analytics_yearly">Total due yearly:</string>
    <string name="analytics_mostexpensive">Most expensive yearly:</string>
    <string name="analytics_mostexpensive_per_year">per year</string>
    <string name="analytics_mostexpensive_none">None</string>
    <string name="analytics_frequentrecharge">Most subscriptions are charged</string>
    <string name="analytics_recharge_onemonth">Every month</string>
    <string name="analytics_recharge_twomonths">Every two months</string>
    <string name="analytics_recharge_threemonths">Every three months</string>
    <string name="analytics_recharge_sixmonths">Twice a year</string>
    <string name="analytics_recharge_year">Once a year</string>
    <string name="analytics_legend_title">Categories</string>
    <string name="array_breakdown_one_month">This Month</string>
    <string name="array_breakdown_two_months">Next Two Months</string>
    <string name="array_breakdown_three_months">Next Three Months</string>
    <string name="array_breakdown_six_months">Next Six Months</string>
    <string name="array_breakdown_one_year">Next Twelve Months</string>
    <string name="notification_channel_name">Subscription Notifications</string>
    <string name="notification_channel_description">Notifications related to when upcoming subscription payments will occur.</string>
    <string name="notification_ioexception_title">Something went wrong with MySubscriptions</string>
    <string name="notification_ioexception_desc">An error occurred while getting your notifications. Check the app for more details.</string>
    <string name="notification_title_one">is being charged soon</string>
    <string name="notification_title_multiple">Multiple subscriptions are being charged soon</string>
    <string name="notification_content_days_zero">Today,</string>
    <string name="notification_content_days_one">Tomorrow,</string>
    <string name="notification_content_days_two">In two days,</string>
    <string name="notification_content_days_three">In three days,</string>
    <string name="notification_content_days_seven">In one week,</string>
    <string name="notification_content_days_default">Soon,</string>
    <string name="notification_content_build_1">you\'ll be charged</string>
    <string name="notification_content_build_2">for</string>
    <string name="calendar_date_format">MMM yyyy</string>
    <string name="calendar_title_text_default">Current Date</string>
    <string name="calendar_day_text_default">00</string>
    <string name="calendar_header_sunday">SUN</string>
    <string name="calendar_header_monday">MON</string>
    <string name="calendar_header_tuesday">TUE</string>
    <string name="calendar_header_wednesday">WED</string>
    <string name="calendar_header_thursday">THU</string>
    <string name="calendar_header_friday">FRI</string>
    <string name="calendar_header_saturday">SAT</string>
    <string name="calendar_prev_btn_desc">Previous Button</string>
    <string name="calendar_next_btn_desc">Next Button</string>
    <string name="calendar_list_text_prefix">Subscriptions due on</string>
    <string name="calendar_sync_button">Sync with System Calendar</string>
    <string name="calendar_sync_name">Subscriptions</string>
    <string name="calendar_sync_security_exception">This app does not have permission to access the calendar, so it could not complete the sync.</string>
    <string name="calendar_sync_name_suffix">is due</string>
    <string name="calendar_sync_permissions_title">Requesting Calendar Permissions</string>
</resources>