<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <!-- date toolbar -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <!-- prev button -->
        <ImageView
            android:id="@+id/calendar_prev_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            app:srcCompat="@drawable/prev_icon"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/calendar_prev_btn_desc" />

        <!-- date title -->
        <TextView
            android:id="@+id/calendar_date_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/calendar_next_button"
            android:layout_toRightOf="@id/calendar_prev_button"
            android:gravity="center"
            android:text="@string/calendar_title_text_default"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="#222222"
            android:layout_toEndOf="@id/calendar_prev_button"
            android:layout_toStartOf="@id/calendar_next_button" />

        <!-- next button -->
        <ImageView
            android:id="@+id/calendar_next_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            app:srcCompat="@drawable/next_icon"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/calendar_next_btn_desc" />
    </RelativeLayout>

    <!-- days header -->
    <LinearLayout
        android:id="@+id/calendar_header"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/calendar_header_sunday"
            android:textColor="#222222" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/calendar_header_monday"
            android:textColor="#222222" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/calendar_header_tuesday"
            android:textColor="#222222" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/calendar_header_wednesday"
            android:textColor="#222222" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/calendar_header_thursday"
            android:textColor="#222222" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/calendar_header_friday"
            android:textColor="#222222" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/calendar_header_saturday"
            android:textColor="#222222" />
    </LinearLayout>

    <!-- days view -->
    <GridView
        android:id="@+id/calendar_grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:numColumns="7"/>
</LinearLayout>